--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.1",
+    "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
