--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
